[package]
name = "ratelimiter"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
clap = { version = "4.5", features = ["derive"] }
dashmap = "6.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.49", features = ["rt-multi-thread", "signal", "macros"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
